[gd_scene load_steps=12 format=3 uid="uid://3gpng865gg1l"]

[ext_resource type="Script" uid="uid://dtuf7m8t5ocgq" path="res://Scripts/home.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://r7p8e6m45r5r" path="res://Scenes/pet/PetMoving.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://ct76jtu1v7076" path="res://art/logos/icon_back.jpg" id="5"]
[ext_resource type="Texture2D" uid="uid://b4tntvpskn7hg" path="res://art/boton_rojo.png" id="7"]
[ext_resource type="Texture2D" uid="uid://byvxa681m0rmt" path="res://art/boton.png" id="8"]
[ext_resource type="Script" uid="uid://vp3ohckoemsl" path="res://Scripts/SettingsMenu.gd" id="9"]
[ext_resource type="PackedScene" path="res://Scenes/dialogs/Confirmation.tscn" id="11"]
[ext_resource type="AudioStream" uid="uid://uca0r5yqgtcm" path="res://sounds/KairukuKing.wav" id="13"]
[ext_resource type="Texture2D" uid="uid://cdam0rpkf23vc" path="res://Scenes/home/estrella_puntos.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dsuosvg5oe4me" path="res://Scenes/home/estella_nombre.png" id="15"]
[ext_resource type="Texture2D" uid="uid://burkhk5q3kq33" path="res://Scenes/home/fondo.jpg" id="16"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("16")

[node name="ContainerButtonsMenu" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/ContainerButtonsMenu"]
layout_mode = 2

[node name="Bttn_Play" type="Button" parent="NinePatchRect/ContainerButtonsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Jugar"
icon = ExtResource("8")
flat = true
expand_icon = true

[node name="Bttn_Option" type="Button" parent="NinePatchRect/ContainerButtonsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Opciones"
icon = ExtResource("8")
flat = true
expand_icon = true

[node name="Bttn_Exit" type="Button" parent="NinePatchRect/ContainerButtonsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Salir"
icon = ExtResource("7")
flat = true
expand_icon = true

[node name="Bttn_Ranking" type="Button" parent="NinePatchRect/ContainerButtonsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Ranking"
icon = ExtResource("8")
flat = true
expand_icon = true

[node name="Bttn_Bonus" type="Button" parent="NinePatchRect/ContainerButtonsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Bono"
icon = ExtResource("8")
flat = true
expand_icon = true

[node name="ContainerInfoVer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 0
anchor_left = 0.022
anchor_top = 0.976
anchor_right = 0.022
anchor_bottom = 0.976

[node name="Label" type="Label" parent="NinePatchRect/ContainerInfoVer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Version: Beta 0.3.0 "

[node name="SettingsMenu" type="Popup" parent="."]
script = ExtResource("9")

[node name="BackgroundSettings" type="NinePatchRect" parent="SettingsMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("5")

[node name="GridContainer" type="GridContainer" parent="SettingsMenu/BackgroundSettings"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
columns = 2

[node name="MasterVolume" type="Label" parent="SettingsMenu/BackgroundSettings/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volumen General"

[node name="SliderMasterVolu" type="HSlider" parent="SettingsMenu/BackgroundSettings/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="MusicVolume" type="Label" parent="SettingsMenu/BackgroundSettings/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Musica"

[node name="SliderMusicVolu" type="HSlider" parent="SettingsMenu/BackgroundSettings/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="SFXVolume" type="Label" parent="SettingsMenu/BackgroundSettings/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Efectos"

[node name="SliderSFXVolume" type="HSlider" parent="SettingsMenu/BackgroundSettings/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="Confirmation" parent="." instance=ExtResource("11")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13")
autoplay = true

[node name="Alias" type="TextureRect" parent="."]
layout_mode = 0
texture = ExtResource("15")
expand_mode = 1

[node name="name" type="RichTextLabel" parent="Alias"]
layout_mode = 0
bbcode_enabled = true
tab_size = 3

[node name="Point" type="TextureRect" parent="."]
layout_mode = 0
texture = ExtResource("14")
expand_mode = 1

[node name="value" type="RichTextLabel" parent="Point"]
layout_mode = 0
bbcode_enabled = true
scroll_active = false
tab_size = 0
meta_underlined = false

[node name="Pet" parent="." instance=ExtResource("4")]
position = Vector2(129, 881)
scale = Vector2(0.3, 0.3)

[connection signal="pressed" from="NinePatchRect/ContainerButtonsMenu/GridContainer/Bttn_Play" to="." method="_on_Bttn_Play_pressed"]
[connection signal="pressed" from="NinePatchRect/ContainerButtonsMenu/GridContainer/Bttn_Option" to="." method="_on_Bttn_Option_pressed"]
[connection signal="pressed" from="NinePatchRect/ContainerButtonsMenu/GridContainer/Bttn_Exit" to="." method="_on_Bttn_Exit_pressed"]
[connection signal="pressed" from="NinePatchRect/ContainerButtonsMenu/GridContainer/Bttn_Ranking" to="." method="_on_Bttn_Ranking_pressed"]
[connection signal="pressed" from="NinePatchRect/ContainerButtonsMenu/GridContainer/Bttn_Bonus" to="." method="_on_Bttn_Bonus_pressed"]
[connection signal="value_changed" from="SettingsMenu/BackgroundSettings/GridContainer/SliderMasterVolu" to="SettingsMenu" method="_on_SliderMasterVolu_value_changed"]
[connection signal="value_changed" from="SettingsMenu/BackgroundSettings/GridContainer/SliderMusicVolu" to="SettingsMenu" method="_on_SliderMusicVolu_value_changed"]
[connection signal="value_changed" from="SettingsMenu/BackgroundSettings/GridContainer/SliderSFXVolume" to="SettingsMenu" method="_on_SliderSFXVolume_value_changed"]
